# tng-smbhb-population

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml
data/: PROVENANCE.md
data/processed/: catalog.csv  catalog_corrected.csv  em_classified.csv  em_classified_corrected.csv  gw_classified.csv  gw_classified_corrected.csv
outputs/synthetic/: em_classified_synth.csv  gw_classified_synth.csv
scripts/: 01_download_mergers.py  02_parse_catalog.py  03_fix_bh_masses.py  03_host_match.py  04_classify_gw_bands.py  05_classify_em_detectability.py  06_generate_plots.py
src/tng_smbhb/: __init__.py  _vendored_constants.py  _vendored_em_detectability.py  _vendored_physics.py  bh_details.py  catalog.py  em_detectability.py  gw_classification.py  plotting.py  population.py
tests/: conftest.py  test_bh_details.py  test_catalog.py  test_em_detectability.py  test_gw_classification.py  test_integration.py  test_plotting.py  test_population.py
